sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if(i=0){i=i+1}
        ^